<resources>
    <string name="app_name">drustii</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_splash">splashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="close_btn">close Btn</string>
    <string name="world_map">World Map - Connect World with Social Networks.</string>
    <string name="email">Email</string>
    <string name="otp_send_successfully_on_email">OTP send Successfully on EMail</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="account">Account</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="drustii">DRUSTII</string>
    <string name="explore">Explore</string>
    <string name="already_having_a_account">Already having a account?</string>
    <string name="invalid_Email">Invalid Email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="dont_having_a_account">Dont having a account?</string>
    <string name="signup">SignUp</string>
    <string name="create_password">Create Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="user_image">user image</string>
    <string name="videocover">VideoCover</string>

</resources>