<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/settings"
        android:enabled="true"
        android:icon="@drawable/ic_favorite"
        android:title="@string/settings" />
    <!--   <item
           android:id="@+id/account"
           android:enabled="true"
           android:icon="@drawable/ic_profile"
           android:title="@string/account"/>
           -->
    <item
        android:id="@+id/privacyPolicy"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/privacy_policy"/>
    <item
        android:id="@+id/TermsAndConditions"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/terms_and_conditions"/>

</menu>