<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="5dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/signUpContainer"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_connected_world"
            android:layout_gravity="center"
            android:contentDescription="@string/world_map" />

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@drawable/card_1_bg"
            android:paddingBottom="20dp"
            >

            <com.google.android.material.textview.MaterialTextView
                style="@style/MaterialAlertDialog.MaterialComponents.Title.Text.CenterStacked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/aclonica"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/signup"
                android:textColor="#277DE6"
                android:textSize="34sp"
                android:textStyle="bold"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userInputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:background="@color/design_default_color_on_primary"
                android:hint="@string/email"
                app:hintTextColor="@color/black"
                android:layout_margin="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userEmail"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="true"
                    android:inputType="textEmailAddress"
                    android:outlineProvider="paddedBounds"
                    android:singleLine="true"
                    android:textColor="#202020"
                    android:textColorHint="@color/black"
                    android:textCursorDrawable="@xml/cursor"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/showError"
                android:gravity="center"
                android:padding="10dp"
                android:textColor="#C62828"
                android:textSize="14sp"
                android:textStyle="bold"
                android:background="@drawable/card_3_bg"
                android:visibility="gone"
                />
            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/progressBar"
                android:indeterminate="true"
                app:indicatorColor="#4554BD"
                android:visibility="gone"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <Button
                    android:id="@+id/signUpBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/signup"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:layout_gravity="center"
                    android:backgroundTint="#FF8F00"
                    style="@style/Widget.MaterialComponents.Button.Icon"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginBottom="30dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/already_having_a_account"
                    android:textColor="#ED5252"/>
                <Button
                    android:layout_width="wrap_content"
                    android:id="@+id/loginBtn"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="#0f0ff1"
                    />

            </LinearLayout>

        </LinearLayout>



    </LinearLayout>
</ScrollView>
